Wed Sep 19 16:54:04 2001  Jeff Parsons <parsons@cs.wustl.edu>

        * ace/Containers_T.cpp:

          In copy constructor for ACE_Duuble_Linked_List, added line to
          copy the size of the rhs to the lhs. The new list was ending
          up with a garbage value for its size.

Wed Sep 19 14:15:08 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/ace_dll.dsp:
	* ace/ace_lib.dsp: Enabled generation of debug info even for
	  release configurations.  Thanks to Jonathan Reis
	  <reis@stentor.com> for suggesting this.

Wed Sep 19 10:23:06 2001  Carlos O'Ryan  <coryan@uci.edu>

        * html/index.html:
          Add couple of missing links to the RT-CORBA components

Wed Sep 19 12:00:04 2001  Johnny Willemsen <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Added BCB5 to some places as supported/used compiler

        * ace/Future.h:
        * ace/Test_and_Set.h:
          Removed the ACE_EXPORT from the templates ACE_Future_Holder and
          ACE_Test_and_Set

        * ace/Service_Config.{h,cpp}:
          Changed the type of the members be_a_daemon_ and no_static_svcs_
          from char to int

Tue Sep 18 13:57:36 2001  Carlos O'Ryan  <coryan@uci.edu>

        * */Makefile:
        * */Makefile.*:
          Updated dependencies, some of the paths were absolute leading to
          ambiguities in parallel builds.

Tue Sep 18 12:18:26 2001  Carlos O'Ryan  <coryan@uci.edu>

        * bin/footprint_stats.sh:
          Fixed bug in footprint charts generation.

Tue Sep 18 10:50:15 2001  Carlos O'Ryan  <coryan@uci.edu>

        * html/index.html:
          Add COS Event and COS Notification services to the index.

Mon Sep 17 19:00:00 2001  Irfan Pyarali  <irfan@cs.wustl.edu>

        * ace/OS.h:

          - THR_SCOPE_PROCESS and THR_SCOPE_SYSTEM were not defined
            for NT.  Added them.

          - Moved the following definitions of VxWorks around such
            that these defines are available even when PACE is not
            used.
